[metadata]
name = chess-game
version = 0.2.2
author = Utkrisht Sinha
description = A simple chess game
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Utkrisht-1997/chess-game
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
install_requires= ['colorama']